changed question mark to 'help'

--- a/rpg/index.html
+++ b/rpg/index.html
@@ -26,7 +26,7 @@
             </div>
               <div style="float: right;">
                 <a id="help" data-toggle="modal" href="#helpModal" class="btn">
-                  <button id="help-button" class="btn btn-info">?</button>
+                  <button id="help-button" class="btn btn-info">Help</button>
                 </a>
               </div>
             </div>
