trying pull left

--- a/rpg/index.html
+++ b/rpg/index.html
@@ -36,7 +36,7 @@
             </table>
 
             <div class="btn-group btn-group-justified" data-toggle="buttons">
-              <label id="create-character" href="#createModal" data-toggle="modal" class="btn btn-success" style="width: 5%;">
+              <label id="create-character" href="#createModal" data-toggle="modal" class="btn btn-success">
                 <input type="radio" name="options" id="option1">
                 <span id="edit-glyph" class="glyphicon glyphicon-plus white page-icons"></span>
               </label>
@@ -145,7 +145,7 @@
             </div>
 
             <div class="modal-footer">
-              <button id="spawn-character" class="btn btn-info" type="button" style="float: left;">
+              <button id="spawn-character" class="btn btn-info pull-left" type="button">
                 <span id="random-glyph" class="glyphicon glyphicon-random white page-icons"></span>
               </button>
               <button id="cancel-create" type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
