--- a/rpg/index.html
+++ b/rpg/index.html
@@ -22,7 +22,7 @@
           <div id="character-list-container">
             <div>
               <div style="float: left;">
-              <h2>Characters</h2> 
+              <h2>Characters <span class="loader"><img src="ajax-loader.gif"></span></h2>
             </div>
               <div style="float: right;">
                 <a id="help" data-toggle="modal" href="#helpModal" class="btn">
