made the create button a simple button, no radio button!

--- a/rpg/index.html
+++ b/rpg/index.html
@@ -34,13 +34,9 @@
               <tbody id="characters">
               </tbody>
             </table>
-
-            <div class="btn-group btn-group-justified" data-toggle="buttons">
-              <label id="create-character" href="#createModal" data-toggle="modal" class="btn btn-success">
-                <input type="radio" name="options" id="option1">
-                <span id="edit-glyph" class="glyphicon glyphicon-plus white page-icons"></span>
-              </label>
-            </div>
+            <button id="create-character" href="#createModal" data-toggle="modal" class="btn btn-success btn-block">
+              <span id="edit-glyph" class="glyphicon glyphicon-plus white page-icons"></span>
+            </button>
           </div>
         </div>
 
