--- a/direct-manipulation/boxes-touch.html
+++ b/direct-manipulation/boxes-touch.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" type="text/css" href="boxes-touch.css"/>
 
         <!-- Load up jQuery first. -->
-        <script src="http://code.jquery.com/jquery-1.4.4.min.js"></script>
+        <script src="//code.jquery.com/jquery-1.4.4.min.js"></script>
 
         <!-- Load up the controller code. -->
         <script src="boxes-touch.js"></script>
