missing backslash, changed help info to match new character creation

--- a/rpg/index.html
+++ b/rpg/index.html
@@ -78,6 +78,7 @@
               <tr>
                 <th>Item name</th>
                 <th>Type</th>
+              </tr>
             </thead>
             <tbody id="item-list">
             </tbody>
@@ -208,7 +209,7 @@
               <p>To get started, you can either create a new character or click an existing character in the list.</p>
               <br>
 
-              <p>To create a character, click <button class="btn btn-xs btn-success"><span class="glyphicon glyphicon-plus white help-icons"></span></button> at the bottom of the character list. This will allow you to choose your character's name, class, and gender. Your character's level and money amount are determined by the gods when you click "Roll". You can also spawn a random character by clicking <button class="btn btn-xs btn-info"><span class="glyphicon glyphicon-random white help-icons"></span></button>. That will automatically fill in the information for your character for you.</p>
+              <p>To create a character, click <button class="btn btn-xs btn-success"><span class="glyphicon glyphicon-plus white help-icons"></span></button> at the bottom of the character list. This will allow you to choose your character's name, class, and gender. Your character's level and money amount are determined by the gods when you click "Roll". You can also spawn a random character by clicking <button class="btn btn-xs btn-info"><span class="glyphicon glyphicon-random white help-icons"></span></button>. That will automatically fill in the information for your character for you. Feel free to click it as many times as you want!</p>
               <br>
 
               <p>To edit a character, first click a character. Then click <button class="btn btn-xs btn-info"><span class="glyphicon glyphicon-edit white help-icons"></span></button> at the bottom of their information panel. This will allow you to change your character's class and gender. You cant change your character's level and money. Sorry! The gods have spoken. </p>
