--- a/widget-from-scratch/plugin-demo.html
+++ b/widget-from-scratch/plugin-demo.html
@@ -23,7 +23,7 @@
 
       <p>This plugin demonstrates a drag-select jQuery plugin.</p>
 
-      <p><div class="drag-select-me"></div></p>
+      <p><div class="drag-select-me"><p class="alignLeft">Left</p> <p class="alignRight">Right</p></div></p>
     </div>
 
     <!-- We wrap up by loading up jQuery, then Bootstrap, then our plugins,
